--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "wrangler": "^4.17.0"
   }
 }
